<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/details_back"
    android:paddingVertical="16dp">

    <TextView
        android:id="@+id/tv_min"
        style="@style/param_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/min"
        app:drawableBottomCompat="@drawable/min"
        app:layout_constraintEnd_toStartOf="@+id/tv_max"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_min_temp"
        style="@style/param_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        app:layout_constraintEnd_toEndOf="@+id/tv_min"
        app:layout_constraintStart_toStartOf="@+id/tv_min"
        app:layout_constraintTop_toBottomOf="@+id/tv_min" />

    <TextView
        android:id="@+id/tv_max"
        style="@style/param_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/max"
        app:drawableBottomCompat="@drawable/max"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_min"
        app:layout_constraintTop_toTopOf="@+id/tv_min" />

    <TextView
        android:id="@+id/tv_max_temp"
        style="@style/param_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        app:layout_constraintEnd_toEndOf="@+id/tv_max"
        app:layout_constraintStart_toStartOf="@+id/tv_max"
        app:layout_constraintTop_toBottomOf="@+id/tv_max" />

    <TextView
        android:id="@+id/tv_wind"
        style="@style/param_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/wind"
        app:drawableBottomCompat="@drawable/speed"
        app:layout_constraintEnd_toStartOf="@+id/tv_direction"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_min_temp" />

    <TextView
        android:id="@+id/tv_wind_number"
        style="@style/param_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed"
        app:layout_constraintEnd_toEndOf="@+id/tv_wind"
        app:layout_constraintStart_toStartOf="@+id/tv_wind"
        app:layout_constraintTop_toBottomOf="@+id/tv_wind" />

    <TextView
        android:id="@+id/tv_direction"
        style="@style/param_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/direction"
        android:textSize="18sp"
        app:drawableBottomCompat="@drawable/direction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_wind"
        app:layout_constraintTop_toTopOf="@+id/tv_wind" />

    <TextView
        android:id="@+id/tv_direction_peak"
        style="@style/param_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dir"
        app:layout_constraintEnd_toEndOf="@+id/tv_direction"
        app:layout_constraintStart_toStartOf="@+id/tv_direction"
        app:layout_constraintTop_toBottomOf="@+id/tv_direction" />

    <TextView
        android:id="@+id/tv_humidity"
        style="@style/param_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/humidity"
        app:drawableBottomCompat="@drawable/humidity"
        app:layout_constraintEnd_toEndOf="@+id/tv_wind"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tv_wind"
        app:layout_constraintTop_toBottomOf="@+id/tv_wind_number" />

    <TextView
        android:id="@+id/tv_humidity_number"
        style="@style/param_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity_example"
        app:layout_constraintEnd_toEndOf="@+id/tv_humidity"
        app:layout_constraintStart_toStartOf="@+id/tv_humidity"
        app:layout_constraintTop_toBottomOf="@+id/tv_humidity" />

    <TextView
        android:id="@+id/tv_pressure"
        style="@style/param_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/pressure"
        app:drawableBottomCompat="@drawable/pressure"
        app:layout_constraintEnd_toEndOf="@+id/tv_direction"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tv_direction"
        app:layout_constraintTop_toBottomOf="@+id/tv_direction_peak" />

    <TextView
        android:id="@+id/tv_pressure_number"
        style="@style/param_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure_example"
        app:layout_constraintEnd_toEndOf="@+id/tv_pressure"
        app:layout_constraintStart_toStartOf="@+id/tv_pressure"
        app:layout_constraintTop_toBottomOf="@+id/tv_pressure" />

</androidx.constraintlayout.widget.ConstraintLayout>
